[package]
name = "md5sum-uring"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "md5sum-uring"

[lib]
name = "md5sum_uring"

[dependencies]
anyhow = { version = "1.0.51", features = ["backtrace"] }
env_logger = "0.9.0"
log = { version = "0.4.14", features = ["max_level_trace"] }
io-uring = "0.5.2"
structopt = "0.3.25"
md-5 = "0.10.0"
libc = "0.2.112"
crossbeam = "0.8.1"
memmap2 = "0.5.0"
